--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,31 +1,17 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Tasks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Photo</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.description %></td>
-        <td><%= task.photo %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Task', new_task_path %>
+<div class="row">
+  <% @tasks.each do |task| %>
+  <div class="card" style="width: 18rem;">
+    <%= image_tag task.photo, class: 'card-img-top' %>
+    <div class="card-header">
+      <%= task.title %>
+    </div>
+    <div class="card-body">
+      <%= link_to 'Mark as completed',
+                  task_todos_path(task),
+                  method: 'post',
+                  class: 'btn btn-primary' %>
+    </div>
+  </div>
+  <% end %>
+</div>
