--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,10 +7,17 @@
       <%= task.title %>
     </div>
     <div class="card-body">
+      <% if current_user.tasks.exists?(task.id) %>
+      <%= link_to 'Unmark this task',
+      task_todo_path(task.id, current_user.todos.find_by(task_id: task.id)),
+      method: 'delete',
+      class: 'btn btn-danger' %>
+      <% else %>
       <%= link_to 'Mark as completed',
-                  task_todos_path(task),
-                  method: 'post',
-                  class: 'btn btn-primary' %>
+      task_todos_path(task),
+      method: 'post',
+      class: 'btn btn-primary' %>
+      <% end %>
     </div>
   </div>
   <% end %>
