Allow to sign out

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,6 +10,16 @@
         <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
       <li class="nav-item dropdown">
+        <% if user_signed_in? %>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= current_user.email %>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to 'Sign out', destroy_user_session_path,
+                                  class: 'dropdown-item',
+                                  method: 'delete' %>
+        </div>
+        <% else %>
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Login
         </a>
@@ -17,6 +27,7 @@
           <%= link_to 'Sign In', new_user_session_path, class: 'dropdown-item' %>
           <%= link_to 'Sign Up', new_user_registration_path, class: 'dropdown-item' %>
         </div>
+        <% end %>
       </li>
     </ul>
   </div>
