--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,5 +30,15 @@
         <% end %>
       </li>
     </ul>
+    <% if user_signed_in? %>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        Tasks completed
+        <span class="badge badge-info">
+          <%= current_user.tasks.count %>
+        </span>
+      </li>
+    </ul>
+    <% end %>
   </div>
 </nav>
