--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,8 @@
           <%= current_user.email %>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to 'Edit user', edit_user_registration_path,
+                                   class: 'dropdown-item' %>
           <%= link_to 'Sign out', destroy_user_session_path,
                                   class: 'dropdown-item',
                                   method: 'delete' %>
