--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,6 +6,26 @@
     <%= devise_error_messages! %>
 
     <div class="form-group">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name,
+                        autofocus: true,
+                        autocomplete: "email",
+                        class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name,
+                        class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :photo %><br />
+      <%= f.text_field :photo,
+                        class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :email %><br />
       <%= f.email_field :email,
       autofocus: true,
