--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,36 +1,63 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= devise_error_messages! %>
+<div class="row">
+  <div class="col">
+    <div class="form-group">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name,
+      autofocus: true,
+      autocomplete: "email",
+      class: 'form-control' %>
+    </div>
 
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email,
-                      autofocus: true,
-                      autocomplete: "email",
-                      class: 'form-control' %>
-  </div>
+    <div class="form-group">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name,
+      class: 'form-control' %>
+    </div>
 
-  <div class="form-group">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password,
-                         autocomplete: "new-password",
-                         class: 'form-control' %>
+    <div class="form-group">
+      <%= f.label :photo %><br />
+      <%= f.text_field :photo,
+      class: 'form-control' %>
+    </div>
   </div>
+  <div class="col">
+    <div class="form-group">
+      <%= f.label :email %><br />
+      <%= f.email_field :email,
+      autofocus: true,
+      autocomplete: "email",
+      class: 'form-control' %>
+    </div>
 
-  <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation,
-                         autocomplete: "new-password",
-                         class: 'form-control' %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password,
+      autocomplete: "new-password",
+      class: 'form-control' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up", class: 'btn btn-primary' %>
+    <div class="form-group">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation,
+      autocomplete: "new-password",
+      class: 'form-control' %>
+    </div>
   </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="actions">
+      <%= f.submit "Sign up", class: 'btn btn-primary' %>
+    </div>
+  </div>
+</div>
 <% end %>
 
 <%= render "users/shared/links" %>
