--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.top-badge{
+  padding: 10px;
+  margin-right: 10px;
+  font-size: large;
+}
+.top-img{
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+}
+.list-img{
+  height: 30px;
+  width: 30px;
+  margin-right: 10px;
+}
