--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,6 +1,14 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.task-card{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+}
+
 .top-badge{
   padding: 10px;
   margin-right: 10px;
@@ -15,4 +23,14 @@
   height: 30px;
   width: 30px;
   margin-right: 10px;
+}
+.separate{
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.status-bar{
+  min-height: 20px;
+}
+.status-icon{
+  font-size: x-large;
 }
