--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -6,7 +6,7 @@
  * vendor/assets/stylesheets directory can be referenced here using a relative path.
  *
  * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * compiled file so he styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
@@ -14,7 +14,7 @@
  *= require_self
  */
 body{
-  background-color: rgb(105, 201, 115);
+  background-image: url("<%= image_path 'science' %>");
 }
 
 .container-margins{
@@ -23,6 +23,9 @@ body{
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: white;
+   -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+   -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
+   box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
  }
 
 .no-padding{
